# style_rank

./: .gitignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  calculate_dissonance.py  calculate_tonnetz_path.py  create_feature_map_hpp.py  create_pcint_header.py  packager.py  setup.py  setup_OLD.py  setup_TEMPLATE.py  test.py  tonnetz_path_lengths.npz
appendix/: README.md
diagram/: diagram.pages  diagram.py
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst  style_rank.rst
src/style_rank/: __init__.py  a.out  api.py  bindings.cpp  calculate_tonnetz_path.py  create_feature_map_hpp.py  create_pcint_header.py  pcd.hpp  (+8 more)
style_rank-1.0.13/: PKG-INFO  README.md  setup.py
style_rank-1.0.18/: PKG-INFO  setup.py
style_rank-1.0.9/: PKG-INFO  README.md  setup.py
test_csv_output/: ChordDissonance.csv  ChordDistinctDurationRatio.csv  ChordDuration.csv  ChordLowestInterval.csv  ChordMelodyNgram.csv  ChordOnset.csv  ChordOnsetPCD.csv  ChordOnsetRatio.csv  ChordOnsetShape.csv  ChordOnsetTiePCD.csv  ChordOnsetTiePCDTogether.csv  ChordPCD.csv  ChordPCDWBass.csv  ChordPCSizeRatio.csv  ChordRange.csv  ChordShape.csv  ChordSize.csv  ChordSizeNgram.csv  ChordTonnetz.csv  ChordTranBassInterval.csv  ChordTranDissonance.csv  ChordTranDistance.csv  ChordTranMelodyInterval.csv  ChordTranOuter.csv  ChordTranRepeat.csv  ChordTranScaleDistance.csv  ChordTranScaleUnion.csv  ChordTranVoiceMotion.csv  IntervalClassDist.csv  IntervalDist.csv  PCDTran.csv
tests/: bwv2.6.mid  bwv3.6.mid  rigor.py  test  test.cpp  test.json  test.py  test_api.py  test_features.cpp
(+12 files in other folders)
